# Imani-OS

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: generate-latest-json.mjs
src/: App.tsx  globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/app/: AppLayout.tsx  AppSidebar.tsx  BrandMark.tsx  RequireAuth.tsx  SoftButton.tsx  StarRating.tsx  UpdateChecker.tsx  UpdateDialog.tsx
src/components/campaigns/: CampaignCard.tsx  CampaignDialog.tsx  CampaignsTab.tsx
src/components/dashboard/: StrategicPulse.tsx
src/components/documents/: BlockInserter.tsx  BlockRenderer.tsx  DocumentPageEditor.tsx  DocumentSidebarTree.tsx  DocumentToolbar.tsx  DocumentWorkspace.tsx  PdfPageViewer.tsx  SlashMenu.tsx
src/components/editor/: RichTextEditor.tsx  RichTextRenderer.tsx
src/components/reports/: PdfPreviewMock.tsx  ReportPrintView.tsx
src/components/roi/: BulkMonthAddDialog.tsx  ImpactToggle.tsx  RoiBulkEntryDialog.tsx  RoiClientSelector.tsx  RoiExportDialog.tsx  RoiPerformanceChart.tsx  RoiSummary.tsx
src/components/ui/: button.tsx
src/contexts/: AuthContext.tsx  DataContext.tsx  SettingsContext.tsx
src/data/: seed.ts
src/lib/: ai.ts  backup.ts  documentExport.ts  documentMigration.ts  documentTree.ts  format.ts  native.ts  pdf.ts  privacy.ts  richText.ts  storage.ts  updater.ts
src/pages/: AgencyHq.tsx  ClientDetail.tsx  Clients.tsx  Dashboard.tsx  FullTemplateBuilder.tsx  Impact.tsx  Index.tsx  Login.tsx  NotFound.tsx  ReportBuilder.tsx  Reports.tsx  RoiDashboard.tsx  SectionTemplateEditor.tsx  Settings.tsx  Templates.tsx  ValueCalculator.tsx  Wins.tsx
src/types/: imani.ts
