[package]
name = "imani-os"
version = "0.1.0"
description = "Imani OS — internal Windows desktop app"
authors = ["Imani Advantage"]
edition = "2021"
license = "MIT"

# Tauri 2 app binary
[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# This section is optional; it just makes clear the crate is a bin.
[[bin]]
name = "imani-os"
path = "src/main.rs"