[package]
name = "imani-os"
version = "0.1.0"
description = "Imani OS — internal Windows desktop app"
authors = ["Imani Advantage"]
edition = "2021"
license = "MIT"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "imani-os"
path = "src/main.rs"